# bevy_table_ui

./: .gitignore  Cargo.toml  README.md  aaa.txt
examples/: example1.rs  test.rs  test1.rs  test2.rs  test3.rs  test4.rs
examples/affect/: mod.rs  utils.rs
examples/common/: mod.rs
examples/example1/: common.rs  mod.rs
render/: camera.rs  components.rs  draw.rs  mesh2d_col.wgsl  mod.rs  pass.rs  phase.rs  pipeline.rs  systems.rs
src/: lib.rs  main.rs  utils.rs
src/affect/: components.rs  mod.rs  plugin.rs  systems.rs  utils.rs  values.rs
src/display/: components.rs  mod.rs  plugin.rs  systems.rs  values.rs
src/display/render/: camera.rs  components.rs  draw.rs  draws.rs  dummy_image.rs  mesh2d_col.wgsl  mod.rs  pass.rs  phase.rs  pipeline.rs  pipelines.rs  resources.rs  setup.rs  systems.rs  utils.rs
src/display/render/shaders/: mod.rs  my_mesh2d_col.wgsl
src/display/render_core/: camera.rs  graph.rs  mod.rs  plugin.rs
src/display/render_core/core_my/: camera.rs  graph.rs  mod.rs  systems.rs
src/display/render_core/core_my/passes/: opaque.rs  transparent.rs
src/display/render_core/core_my/phases/: batch.rs  mod.rs  opaque.rs
src/display/render_core/passes/: mod.rs  transparent.rs
src/display/render_core/phases/: alpha.rs  transparent.rs
src/display/render_core/upscaling/: mod.rs  nodes.rs  pipelines.rs  systems.rs
src/display/render_core/upscaling/shaders/: mod.rs
src/display/render_upscaling/: components.rs  mod.rs  nodes.rs  pipelines.rs  plugin.rs  systems.rs
src/display/systems/: image.rs  image_and_text.rs  mod.rs  text.rs
src/interact/: components.rs  events.rs  messages.rs  mod.rs  plugin.rs  resources.rs  vals.rs
src/interact/systems/: cursoring.rs  dragging.rs  focusing.rs  hovering.rs  mod.rs  pressing.rs  selecting.rs
src/layout/: components.rs  messages.rs  mod.rs  plugin.rs  resources.rs  systems.rs  utils.rs  values.rs
