[package]
name = "bevy_table_ui"
version = "0.1.1"
edition = "2021"

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_render","bevy_asset","bevy_color","bevy_image","bevy_text","trace",
    #"bevy_window",
    #"serialize","x11", "bevy_render", "bevy_asset","bevy_color","multi_threaded"
] }
#bevy = { version = "0.17", default-features = true, features = [ "serialize","file_watcher",] }

#bevy_internal = { version = "0.16", features = [ "bevy_image" ]}
#bevy_internal = { version = "0.16", features = [ "bevy_render" ]}
bytemuck = "1.7"
tracing = { version = "0.1", default-features = false, features = ["std"] }
#cosmic-text = "0.12.1"

radsort = "0.1"

[dev-dependencies]
#bevy = { version = "0.17", default-features = false, features = [ "serialize","multi_threaded","bevy_window","x11", "file_watcher","png",  ] } #"dynamic_linking" ,"bevy_ui"
#bevy = { version = "0.17", default-features = false, features = [
#    "bevy_asset", "bevy_camera","bevy_color","bevy_core_pipeline","bevy_gilrs",
#    "bevy_image", "bevy_render", "bevy_shader", "bevy_state","bevy_text",
#    "bevy_window","bevy_winit","custom_cursor", "multi_threaded","png",
#    "std", "dynamic_linking",
#]}

bevy = { version = "0.17", default-features = true, features = [
    #"serialize","file_watcher",
    "dynamic_linking",
]}

rand = "0.8"
[lib]
name = "bevy_table_ui"
path = "src/lib.rs"

[[example]]
name = "example1"
path = "examples/example1.rs"

[[example]]
name = "test1"
path = "examples/test1.rs"

[[example]]
name = "test2"
path = "examples/test2.rs"

[[example]]
name = "test3"
path = "examples/test3.rs"

[[example]]
name = "test4"
path = "examples/test4.rs"

[features]
trace = []
webgl = []
webgpu = []