[package]
name = "bevy_table_ui"
version = "0.1.1"
edition = "2021"

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_render","bevy_asset","bevy_color","bevy_image","bevy_text",
    "bevy_sprite",
    #"bevy_camera",
]}

bytemuck = "1.7"
radsort = "0.1"
tracing = { version = "0.1", default-features = false, features = ["std"] }

[dev-dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "serialize","file_watcher",
    "bevy_winit",
    "png",
    "dynamic_linking",
    "multi_threaded",
    "debug",
    "trace",
    "default_font",
]}

rand = "0.8"
[lib]
name = "bevy_table_ui"
path = "src/lib.rs"

[[example]]
name = "example1"
path = "examples/example1/mod.rs"

[[example]]
name = "test1"
path = "examples/test1.rs"

[[example]]
name = "test3"
path = "examples/test3.rs"

[[example]]
name = "test4"
path = "examples/test4.rs"

[features]
trace = []
webgl = []
webgpu = []